Fix Dark Mode background-color Issue

--- a/public/Buttons/Ayush9951/style.css
+++ b/public/Buttons/Ayush9951/style.css
@@ -1,3 +1,7 @@
+body {
+    background: white;
+}
+
 button {
     font-size: 16px;
     padding: 15px;
